Changelog
=========

All notable changes to this project will be documented in this file.

The format is based on `Keep a Changelog <http://keepachangelog.com/>`_
and this project adheres to `Semantic Versioning <http://semver.org/>`_

UNRELEASED VERSION
------------------

Added
~~~~~

- Check which user is logged in and expose that in ``connection.logged_in_user``

Changed
~~~~~~~

- Refactored some code in the model building, which is optional if you only want
  to use xnatpy for a convenience layer about requests. Giving ``no_build_model=True``
  to the connect function will disable the scraping of the server xml structure and
  not create all classes, but will log in and keep alive a connection. Only the simple
  connection ``get``, ``head``, ``put``, ``post``, ``delete``, ``download``, ``upload``
  methods are really safe to use in that case.
- XNAT objects (including subject and experiments) will use the listing to get their
  label and xsitype to avoid the need to get each experiment when creating a listing.
  This makes listings way more efficient.

0.3.13 - 2019-01-07
-------------------

Fixed
~~~~~

- Import problem in Python 2 which broke xnatpy

0.3.12 - 2019-01-03
-------------------

Added
~~~~~

- Adds fields argument to the dicom_dump method to filter on dicom tags server side.
- Adds dicom_dump method to prearchive scan.
- Allow deleting variables by useing del object.variable, this works in most
  cases but seem to fail server-side on restriction such as gender (it does
  not match any valid options)

Changed
~~~~~~~

- Beter computation for the uri's of resources

Fixed
~~~~~

- Fixed xml deprecation warning due to the use of .getchildren()

0.3.11 - 2018-11-12
-------------------

Fixed
~~~~~

- Functions with an async parameter had them renamed to asynchronous as async
  is a keyword as of Python 3.7
- Fix a bug in the XSD parsing when an XSD contains a schema-level simpleType